# grpc-cmake-template

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  build_all.ps1  build_all.sh  run_tests.sh  smoke_test.ps1  smoke_test.sh
3p/: CMakeLists.txt  build_grpc.ps1  build_grpc.sh  build_using_cmake.sh  get_build_options.sh
client/: CMakeLists.txt  caching_interceptor.h  client.cpp  greeter_client.cpp  grpc-client.cpp  health-check.cpp  keyvalue-client.cpp  utilities.h
examples/: CMakeLists.txt
examples/client/: CMakeLists.txt  grpc-client.cpp  utilities.h
examples/proto/: CMakeLists.txt  healthcheck.proto
proto/: CMakeLists.txt  address.proto  addressbook.proto
scripts/: build_grpc.sh
server/: CMakeLists.txt  greeter_server.cpp  grpc-server.cpp  keyvalue-server.cpp  server.cpp
src/: CMakeLists.txt  greeter_client.cc  greeter_server.cc
